syntax = "proto3";

package proto;

option go_package = "contract-sdk-test1/pb/protogo";

// manager as server - sandbox established a connection to the manager
service Contract {
    rpc Connect(stream ContractMessage) returns (stream ContractMessage);
}

message ContractMessage {
    Type type = 1;

    string contract_name = 2;

    bytes payload = 3;
}

enum Type {
    UNDEFINED = 0;
    REGISTER = 1;
    REGISTERED = 2;
    PREPARE = 3;
    READY = 4;
    INIT = 5;
    INVOKE = 6;
    GET_STATE = 7;
    RESPONSE = 8;
    COMPLETED = 9;
    ERROR = 10;
}

message Response {
    // A status code that should follow the HTTP status codes.
    int32 status = 1;

    // A message associated with the response code.
    string message = 2;

    // A payload that can be used to include metadata with this response.
    bytes payload = 3;
}

message Input {
    map<string, string> args = 1;

    bool isInit = 2;
}