syntax = "proto3";

package proto;

option go_package = "chainmaker.org/chainmaker-contract-sdk-docker-go/pb/protogo";

// manager as server - sandbox established a connection to the manager
service DMSRpc {
    rpc DMSCommunicate(stream DMSMessage) returns (stream DMSMessage);
}

message DMSMessage {
    DMSMessageType type = 1;

    string contract_name = 2;

    bytes payload = 3;
}

enum DMSMessageType {
    DMS_MESSAGE_TYPE_UNDEFINED = 0;
    DMS_MESSAGE_TYPE_REGISTER = 1;
    DMS_MESSAGE_TYPE_REGISTERED = 2;
    DMS_MESSAGE_TYPE_PREPARE = 3;
    DMS_MESSAGE_TYPE_READY = 4;
    DMS_MESSAGE_TYPE_INIT = 5;
    DMS_MESSAGE_TYPE_INVOKE = 6;
    DMS_MESSAGE_TYPE_GET_STATE = 7;
    DMS_MESSAGE_TYPE_RESPONSE = 8;
    DMS_MESSAGE_TYPE_COMPLETED = 9;
    DMS_MESSAGE_TYPE_ERROR = 10;
}

message Response {
    // A status code that should follow the HTTP status codes.
    int32 status = 1;

    // A message associated with the response code.
    string message = 2;

    // A payload that can be used to include metadata with this response.
    bytes payload = 3;
}

message Input {
    map<string, string> args = 1;

    bool is_init = 2;
}


// completed message
message ResponseWithWriteMap {
    Response response = 1;

    map<string, TxWrite> write_map = 2;
}


// key read version
message KeyVersion {
    // the transaction identifier that last modified the key
    string ref_tx_id = 3;
    // the offset of the key in the write set of the transaction, starts from 0
    int32 ref_offset = 4;
}

// TxRead describes a read operation on a key
message TxRead {
    // read key
    bytes key = 1;
    // the value of the key
    bytes value = 2;
    // contract name, used in cross-contract calls
    // set to null if only the contract in transaction request is called
    string contract_name = 3;
    // read key version
    KeyVersion version = 4;
}

// TxRead describes a write/delete operation on a key
message TxWrite {
    // write key
    bytes key = 1;
    // write value
    bytes value = 2;
    // contract name, used in cross-contract calls
    // set to null if only the contract in transaction request is called
    string contract_name = 3;
}




